# nightingale-flutter

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCY_ANALYSIS.txt  DEPENDENCY_CHAIN.csv  DEPENDENCY_DIAGRAM.md  DRAWING_FUNCTIONS_REFERENCE.txt  DRAWING_PIPELINE_ANALYSIS.md  DRAWING_PIPELINE_INDEX.md  DRAWING_PIPELINE_SUMMARY.txt  ENGRAVING_GAPS.md  PORTING_PRIORITIES.md  PORTING_ROADMAP.txt  PROGRESS.md  README.md  RENDERING_QUICK_REFERENCE.md  ROADMAP.md  RPTEND_AND_VOLTA_ANALYSIS.md  SESSION_SUMMARY.md  TESTING.md  nightingale_rendering_rules.md  qa_compare_full_output.txt
.claude/: settings.json
.github/workflows/: ci.yml
doc/: MUSICXML_ROUNDTRIP_FINDINGS.md  README.md  research-musicxml.md  research-unimplemented-features.md
doc/archive/: DEPENDENCY_DIAGRAM.md  QA_COMPARE_RESULTS.md  RPTEND_IMPLEMENTATION_PLAN.md  qa_compare_output.txt
icebox/tests_archive/: cross_validate.rs  og_comparison.rs
nightingale/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
nightingale/integration_test/: simple_test.dart
nightingale/lib/: main.dart  qa_compare_screen.dart  score_painter.dart
nightingale/linux/: CMakeLists.txt
nightingale/rust/: Cargo.toml
nightingale/rust/src/: frb_generated.rs
nightingale/rust/src/api/: compare.rs  mod.rs  score.rs
nightingale/rust_builder/: pubspec.yaml
nightingale/test/: widget_test.dart
nightingale/web/: index.html  manifest.json
nightingale_app/: pubspec.yaml
scripts/: bootstrap-og-source.sh  fetch-fonts.sh  install-hooks.sh  make-asset-symlinks.sh  og-compare.sh  pre-commit  qa-compare-smart.sh  qa-compare.sh  visual-review.sh
src/: basic_types.rs  beam.rs  comparison.rs  context.rs  defs.rs  doc_types.rs  duration.rs  layout.rs  lib.rs  limits.rs  music_font.rs  obj_types.rs  objects.rs  og_render.rs  pitch_utils.rs  smufl_metadata.rs  space_time.rs  utility.rs
tests/: canonical_comparison.rs  doc_header_and_accessors.rs  element_tests.rs  golden_diff.rs  midi_export.rs  musicxml_pipeline.rs  ngl_all.rs  notelist_all.rs  qa_compare.rs  read_ngl.rs  render_pdf.rs  render_score.rs  roundtrip_visual.rs
(+314 files in other folders)
