[package]
name = "nightingale-core"
version = "0.1.0"
edition = "2021"
description = "Nightingale music notation engine — Rust port"
license = "MPL-2.0"
repository = "https://github.com/AMNS/Nightingale"

[dependencies]
# Binary parsing (big-endian Mac 68k/PPC formats)
binrw = "0.14"
# Error handling
thiserror = "2"
# PDF generation — maps directly from PS_Stdio.cp PostScript primitives
pdf-writer = "0.14"
# OpenType/TrueType font parsing — for SMuFL glyph rendering in PDF + bitmap
ttf-parser = "0.25"
# Pure-Rust 2D rendering — BitmapRenderer for visual regression tests
tiny-skia = "0.11"

# macOS-only: native CoreGraphics PDF rendering for OG reference comparison
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[dev-dependencies]
# Snapshot testing
insta = "1"
# PNG loading/saving and pixel-level comparison for visual regression tests
image = "0.25"
