[package]
name = "rust_lib_nightingale"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
nightingale-core = { path = "../.." }
encoding-next = "0.3"

# macOS-only: needed for OG comparison (CoreGraphics PDF rendering)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
